force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Balance_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balance_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated through the Salesforce layout. When enabled, the system will determine whether each period&apos;s specified spread statement record total (group total) is equal to 0. It will display &quot;balanced&quot; if it is, and &quot;unbalanced!&quot; if not. When disabled, nothing occurs. It is disabled by default.</description>
    <inlineHelpText>Determines whether or not to balance the  total columns. If columns are grouped then the grouped columns will be balanced otherwise the columns themselves will be balanced. If the total is equal to zero it is considered balanced.</inlineHelpText>
    <label>Balance Total</label>
    <type>Checkbox</type>
</CustomField>