force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Borrower_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Borrower_Type__c</fullName>
    <description>This field is currently not being used</description>
    <label>Borrower Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Limited Guarantor</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>