force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Bundle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bundle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required and automatically updated. The Underwriting Bundle to which this object is related.</description>
    <inlineHelpText>The Underwriting Bundle to which this object is related.</inlineHelpText>
    <label>Bundle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LLC_BI__Underwriting_Bundle__c.LLC_BI__Is_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.LLC_BI__Is_Template__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Spread Statements</relationshipLabel>
    <relationshipName>Spread_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>