force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is optional. It is populated through the Salesforce layout. This text is only displayed when looking at a spread statement template record.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>