force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Display_Projection_Drivers__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Projection_Drivers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. This field controls the visibility of the Driver column for Projections on the Balance Sheet, Income Statement and NOI Statement.</description>
    <label>Display Projection Drivers</label>
    <type>Checkbox</type>
</CustomField>