force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Display_Trend__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Trend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. User updated. This field controls the visibility of the Trend column on the Balance Sheet and Income Statement.</description>
    <inlineHelpText>This field controls the visibility of the Trend column on the Balance Sheet and Income Statement.</inlineHelpText>
    <label>Display Trend</label>
    <type>Checkbox</type>
</CustomField>