force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Entity_Type__c</fullName>
    <description>This field is optional and manually updated. If set, the entity type associated with the account is used as criteria for template selection.</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
                <default>true</default>
                <label>Sole Proprietorship</label>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Nonprofit Corporation</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company (LLC)</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Municipality / Other Public Entity</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer - Direct</fullName>
            </value>
            <value>
                <fullName>Customer - Channel</fullName>
            </value>
            <value>
                <fullName>Channel Partner / Reseller</fullName>
            </value>
            <value>
                <fullName>Installation Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Operating Company</fullName>
            </value>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>