force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Group_Columns__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Group_Columns__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. It is populated through the Salesforce layout. This field must be enabled for &quot;LLC_BI__Balance_Total__c&quot; to work. It is no longer used outside of this. It is disabled by default.</description>
    <inlineHelpText>Determines whether or not the columns for the template should be grouped. I.e. Months into quarters and quarters into years.</inlineHelpText>
    <label>Group Columns</label>
    <type>Checkbox</type>
</CustomField>