force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Is_Global_Analysis__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Global_Analysis__c</fullName>
    <description>This field is currently not being used</description>
    <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Global Analysis&apos;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Global Analysis</label>
    <type>Checkbox</type>
</CustomField>