force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not being used</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.LLC_BI__Product_Type__c</field>
            <operation>equals</operation>
            <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.LLC_BI__Product_Line__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Spread Statement Templates</relationshipLabel>
    <relationshipName>Spread_Statement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>