force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is currently not being used</description>
    <label>Product Line</label>
    <referenceTo>LLC_BI__Product_Line__c</referenceTo>
    <relationshipLabel>Spread Statement Templates</relationshipLabel>
    <relationshipName>Spread_Statement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>