force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Supports_Common_Sizing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Supports_Common_Sizing__c</fullName>
    <description>This field is optional. It is automatically populated via a formula. It determines which spread statement types allow the user to enable common sizing. When enabled, the spread statement supports common sizing. Income Statement and Balance Sheet are the only spread statements which have this enabled.</description>
    <formula>OR(ISPICKVAL(LLC_BI__Type__c, &apos;Income Statement&apos;),ISPICKVAL(LLC_BI__Type__c, &apos;Balance Sheet&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supports Common Sizing</label>
    <type>Checkbox</type>
</CustomField>