force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Supports_Trend__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Supports_Trend__c</fullName>
    <description>This defaults to false. Does this statement type support trend.</description>
    <formula>OR(ISPICKVAL(LLC_BI__Type__c, &apos;Income Statement&apos;),ISPICKVAL(LLC_BI__Type__c, &apos;Balance Sheet&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does this statement type support trend.</inlineHelpText>
    <label>Supports_Trend</label>
    <type>Checkbox</type>
</CustomField>