force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Total_Hide_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Hide_Currency_Symbol__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. Controls display of the currency symbol on the Total Record Group that is automatically created for this Spread Statement Template.</description>
    <inlineHelpText>Controls display of the currency symbol on the Total Record Group that is automatically created for this Spread Statement Template</inlineHelpText>
    <label>Total Hide Currency Symbol</label>
    <type>Checkbox</type>
</CustomField>