force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is required.  The selected value will be displayed as the name of the Spread Statement.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Traditional Cash Flow</fullName>
            </value>
            <value>
                <fullName>UCA Cash Flow</fullName>
            </value>
            <value>
                <fullName>Personal Financial Statement</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Ratios</fullName>
            </value>
            <value>
                <fullName>Schedule C</fullName>
            </value>
            <value>
                <fullName>Schedule E</fullName>
            </value>
            <value>
                <fullName>Schedule F</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>NOI Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>