force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Type__c</columns>
    <columns>LLC_BI__Total_Row_Name__c</columns>
    <columns>LLC_BI__Is_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LLC_BI__Is_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Template view</label>
    <language>en_US</language>
</ListView>